--- a/package.json
+++ b/package.json
@@ -14,16 +14,21 @@
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "@unimodules/core": "^7.0.0",
+    "link": "^0.1.5",
     "react": "16.13.1",
-    "react-native": "0.63.4",
+    "react-native": "^0.63.4",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^3.2.1",
+    "react-native-imagepicker": "^2.0.0",
     "react-native-paper": "^4.7.2",
     "react-native-permissions": "^3.0.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.18.0",
-    "unimodules-permissions-interface": "^6.0.0"
+    "react-native-splash-screen": "^3.2.0",
+    "react-native-vector-icons": "^8.1.0",
+    "unimodules-permissions-interface": "^6.0.0",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
